# smolnima

./: .gitignore  README.md  __init__.py  __main__.py  agent.py  cli.py  config.py  example.py  experiment_tracker.py  models.py  packages.txt  requirements-streamlit.txt  requirements.txt  run_clean.sh  setup.py  streamlit_agent.py  streamlit_app_enhanced.py  streamlit_logger.py
.streamlit/: config.toml
agent/: __init__.py
agent/agents/: __init__.py  nima_agent.py
agent/models/: __init__.py  gemini.py
agent/prompts/: __init__.py  nima_prompts.py
agent/tools/: __init__.py  gan_physics.py  rag_tool.py
documentation/: 01_RATIONALE.md  02_ARCHITECTURE.md  03_TOOLS.md  README.md  flowchart.py
experiments/2025-10-18_13-21-43_generate_1000_events_from_dis__idis_and_sidis_and_/: metadata.json  query_and_response.txt
experiments/2025-10-18_14-11-24_Visualize_quark_distributions/: metadata.json  query_and_response.txt
gui/: __init__.py  app.py  streamlit_agent.py
mcp/: README.md  mcp_server.py  pyproject.toml  run_mcp_server.sh
mcp/agent_tools/: __init__.py
mcp/documentation/: 01_RATIONALE.md  02_ARCHITECTURE.md  04_CLIENT.md  README.md  flowchart.py
mcp/mcp_utils/: __init__.py  path_utils.py
mcp/tools/: __init__.py
tools/: __init__.py  particle_physics.py
